--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "apisauce": "^2.1.2",
     "axios": "^0.25.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "classnames": "^2.3.2",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.7",
     "fbjs": "^3.0.4",
